--- a/app/globals.css
+++ b/app/globals.css
@@ -1,48 +1,12 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --primaryGreen: #134a38;
+  --accentGreen: #82e578;
+  --buttonHoverGreen: #bef0ad;
+  --backgroundCream: #f5f0d6;
+  --textColour: #434343;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
-
-.api-image {
-  max-width: 100%;
-  height: 20vh;
-  border-radius: 8px;
+body{
+  background-color: var(--backgroundCream);
 }
