Start and Last button added. Button functionality changed.

--- a/app/components/ImageControlButton.module.css
+++ b/app/components/ImageControlButton.module.css
@@ -2,17 +2,26 @@
   flex: 1;
   color: var(--primaryGreen);
   background-color: var(--accentGreen);
-  font-family: inherit;
   font-weight: 700;
   font-size: 1rem;
   padding: 16px 32px;
   border: none;
   border-radius: 100px;
   transition: background-color 0.3s ease, transform 0.3s ease;
-
 } 
 
 .button:hover {
   cursor: pointer;
   background-color: var(--buttonHoverGreen);
+}
+
+.button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  background-color: #ccc;
+}
+
+.link.link{
+  text-decoration: underline!important;
+  background-color: transparent;
 }
