--- a/app/components/ApiDisplay.module.css
+++ b/app/components/ApiDisplay.module.css
@@ -1,14 +1,17 @@
 .buttonContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 2rem;
   width: fit-content;
   margin: 2rem auto;
 }
 
 .image {
+  display: block;
+  margin: 0 auto;
   width: 35vw;
   height: 40vh;
   object-fit: cover;
   border-radius: 8px;
+  text-align: center;
 }
