--- a/app/page.module.css
+++ b/app/page.module.css
@@ -24,6 +24,7 @@
   color: var(--primaryGreen);
   text-align: center;
   text-wrap: balance;
+  max-width: 1100px;
 }
 
 .comment{
@@ -37,11 +38,15 @@
 
 @media (max-width: 600px) {
   .page {
-    padding: 32px;
-    padding-bottom: 80px;
+    padding: 1em;
+    padding-bottom: 3em;
   }
 
   .main {
     align-items: center;
+  }
+
+  .heading {
+    font-size: 2.5rem;
   }
 }
