--- a/app/components/ApiDisplay.module.css
+++ b/app/components/ApiDisplay.module.css
@@ -15,3 +15,14 @@
   border-radius: 8px;
   text-align: center;
 }
+
+@media (max-width: 600px) {
+  .buttonContainer {
+    gap: 0.5rem;
+  }
+
+  .image {
+    width: 70vw;
+    height: 30vh;
+  }
+}
